[gd_scene load_steps=3 format=3 uid="uid://dvcq3ksqiwgam"]

[ext_resource type="Script" uid="uid://ve62jvmovoja" path="res://src/UI/menus/pause_menu.gd" id="1_itbmg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7r3jq"]

[node name="PauseMenu" type="VBoxContainer"]
offset_right = 192.0
offset_bottom = 129.0
theme_override_constants/separation = 0
script = ExtResource("1_itbmg")

[node name="PausedLabel" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "PAUSED"
horizontal_alignment = 1

[node name="Margin" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_7r3jq")

[node name="ResumeButton" type="Button" parent="."]
process_mode = 3
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
text = "Resume"
flat = true

[node name="RestartButton" type="Button" parent="."]
process_mode = 3
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
text = "Restart"
flat = true

[node name="ReturnButton" type="Button" parent="."]
process_mode = 3
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
text = "Return to Main Menu"
flat = true

[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
